
	* When a C# value was marshalled to C++, and the actual type of
	  the C++ instance was cast to the type of the return value, it
	  wasn't working correctly if the target type for the cast wasn't in
	  the same smoke module as the type of the instance. For instance,
	  an instance of type Plasma::Applet wasn't being correctly cast
	  to a QGraphicsLayoutItem, which caused a crash.

2008-06-20  Richard Dale  <richard.j.dale@gmail.com>

	* Call QMetaObject.NormalizedSignature() on the Q_SLOT and Q_SIGNAL
	  strings when creating a QMetaObject with them, otherwise space and 
	  other things will be significant.

2008-06-19  Richard Dale  <richard.j.dale@gmail.com>

	* If SmokeMarshallers.CreateInstance() couldn't find a C# class with
	  the name passed to it, it just crashed. So output an error message
	  so it is obvious what is going on.
	* The names of the C# classes were not being set up correctly in the
	  C++ to C# name maps.

2008-06-18  Richard Dale  <richard.j.dale@gmail.com>

	* Don't convert QChars to C# chars, keep them as QChars

2008-06-17  Richard Dale  <richard.j.dale@gmail.com>

	* Added an implicit constructor operator for converting strings to
	  QByteArrays as it is useful for the KAboutData classes

2008-06-16  Richard Dale  <richard.j.dale@gmail.com>

	* Add a header 'marshall_macros.h' with the template methods and macros
	  for QList and QVector pointer and value based marshallers.
	* Regenerate the Qt sources with the recent changes in code generation
	  for namespaces and nested structs

2008-06-13  Richard Dale  <richard.j.dale@gmail.com>

	* Pass the resolve_classname() functions a 'smokeqyoto_object *' so that
	  they can change the smoke lib and classId on it.

2008-06-11  Arno Rehn  <arno@arnorehn.de>

	* Added the AssemblySmokeInitializer Attribute. It takes a Type of
	  another class as an argument and is intended to initialize the
	  underlying smoke lib for the binding. A method named 'InitSmoke'